@@ -8,11 +8,14 @@ package com.github.toolarium.icap.client;
 import com.github.toolarium.icap.client.dto.ICAPRemoteServiceConfiguration;
 import com.github.toolarium.icap.client.dto.ICAPServiceInformation;
 import com.github.toolarium.icap.client.impl.ICAPClientImpl;
+import com.github.toolarium.icap.client.impl.ICAPConnectionManagerImpl;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.time.Instant;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -26,8 +29,9 @@ public final class ICAPClientFactory {
     private static final int DEFAULT_MAX_CACHE_AGE = 12 * 60 * 60;
     private static final Logger LOG = LoggerFactory.getLogger(ICAPClientFactory.class);
     private Map<ICAPServiceInformation, ICAPRemoteServiceConfiguration> serviceCache;
-    
-    
+    private ICAPConnectionManager connectionManager;
+
+
     /**
      * Private class, the only instance of the singelton which will be created by accessing the holder class.
      *
@@ -43,9 +47,10 @@ public final class ICAPClientFactory {
      */
     private ICAPClientFactory() {
         serviceCache = new ConcurrentHashMap<ICAPServiceInformation, ICAPRemoteServiceConfiguration>();
+        connectionManager = new ICAPConnectionManagerImpl();
     }
 
-    
+
     /**
      * Get the instance
      *
@@ -55,11 +60,36 @@ public final class ICAPClientFactory {
         return HOLDER.INSTANCE;
     }
 
-    
+
+    /**
+     * Gets the current connection manager
+     *
+     * @return the connection manager
+     */
+    public ICAPConnectionManager getICAPConnectionManager() {
+        return connectionManager;
+    }
+
+
+    /**
+     * Sets the connection manager
+     *
+     * @param connectionManager sets a connection manager in which the establishment of the connection can take place in a controlled manner
+     * @throws IllegalArgumentException In case of an invalid connection manager
+     */
+    public void setICAPConnectionManager(ICAPConnectionManager connectionManager) {
+        if (connectionManager == null) {
+            throw new IllegalArgumentException("Invalid connection manager!");
+        }
+
+        this.connectionManager = connectionManager;
+    }
+
+
     /**
      * Get the ICAP client
      *
-     * @param icapUrl the icap url, e.g. icap://localhost:1344/srv_clamav
+     * @param icapUrl the icap url, e.g. icap://localhost:1344/srv_clamav or icaps://localhost:1344/srv_clamav
      * @return the ICAP client
      * @throws MalformedURLException In case of an invalid URL
      */
@@ -67,7 +97,7 @@ public final class ICAPClientFactory {
         return getICAPClient(icapUrl, DEFAULT_MAX_CACHE_AGE);
     }
 
-    
+
     /**
      * Get the ICAP client
      *
@@ -77,30 +107,44 @@ public final class ICAPClientFactory {
      * @return the ICAP client
      */
     public ICAPClient getICAPClient(String hostName, int servicePort, String serviceName) {
-        return getICAPClient(hostName, servicePort, serviceName, DEFAULT_MAX_CACHE_AGE);
+        return getICAPClient(hostName, servicePort, serviceName, false, DEFAULT_MAX_CACHE_AGE);
     }
 
-    
+
     /**
      * Get the ICAP client
      *
-     * @param icapUrl the icap url, e.g. icap://localhost:1344/srv_clamav
+     * @param hostName the host name
+     * @param servicePort the service port
+     * @param serviceName the service name
+     * @param secureConnection true to use secure ssl connection; otherwise false
+     * @return the ICAP client
+     */
+    public ICAPClient getICAPClient(String hostName, int servicePort, String serviceName, boolean secureConnection) {
+        return getICAPClient(hostName, servicePort, serviceName, secureConnection, DEFAULT_MAX_CACHE_AGE);
+    }
+
+
+    /**
+     * Get the ICAP client
+     *
+     * @param icapUrl the icap url, e.g. icap://localhost:1344/srv_clamav or icaps://localhost:1344/srv_clamav
      * @param cacheMaxAgeInSeconds the max age in seconds of the cache
      * @return the ICAP client
      * @throws MalformedURLException In case of an invalid URL
      */
     public ICAPClient getICAPClient(String icapUrl, int cacheMaxAgeInSeconds) throws MalformedURLException {
-        
-        if (icapUrl == null || icapUrl.isBlank()) {
+
+        if (icapUrl == null || StringUtils.isBlank(icapUrl)) {
             throw new MalformedURLException("Invalid icap url!");
         }
-        
+
         String url = icapUrl.trim();
         int idx = url.indexOf(':');
-        if (idx < 0 || !url.toLowerCase().startsWith("icap:")) {
+        if (idx < 0 || !(url.toLowerCase().startsWith("icap:") || url.toLowerCase().startsWith("icaps:"))) {
             throw new MalformedURLException("Invalid icap url, expected url starts with icap prototcol, e.g. icap://...!");
         }
-        
+
         url = url.substring(idx + 1).trim();
         while (!url.isEmpty() && url.startsWith("/")) {
             url = url.substring(1);
@@ -112,7 +156,7 @@ public final class ICAPClientFactory {
             serviceName = url.substring(idx + 1).trim();
             url = url.substring(0, idx).trim();
         }
-        
+
         String hostName = url.trim();
         int servicePort = 1344;
         idx = url.indexOf(':');
@@ -120,10 +164,11 @@ public final class ICAPClientFactory {
             hostName = url.substring(0, idx).trim();
             servicePort = Integer.parseInt(url.substring(idx + 1).trim());
         }
-        
-        return getICAPClient(hostName, servicePort, serviceName, DEFAULT_MAX_CACHE_AGE);
+
+        boolean secureConnection = url.toLowerCase().startsWith("icaps:");
+        return getICAPClient(hostName, servicePort, serviceName, secureConnection, cacheMaxAgeInSeconds);
     }
-    
+
 
     /**
      * Get the ICAP client
@@ -131,19 +176,20 @@ public final class ICAPClientFactory {
      * @param hostName the host name
      * @param servicePort the service port
      * @param serviceName the service name
+     * @param secureConnection true to use icaps connection (secured SSLSocket connection)
      * @param cacheMaxAgeInSeconds the max age in seconds of the cache
      * @return the ICAP client
      */
-    public ICAPClient getICAPClient(String hostName, int servicePort, String serviceName, int cacheMaxAgeInSeconds) {
-        ICAPServiceInformation serviceInformation = new ICAPServiceInformation(hostName, servicePort, serviceName, cacheMaxAgeInSeconds);
-        
+    public ICAPClient getICAPClient(String hostName, int servicePort, String serviceName, boolean secureConnection, int cacheMaxAgeInSeconds) {
+        ICAPServiceInformation serviceInformation = new ICAPServiceInformation(hostName, servicePort, secureConnection, serviceName, cacheMaxAgeInSeconds);
+
         ICAPRemoteServiceConfiguration remoteServiceConfiguration = serviceCache.get(serviceInformation);
 
-        if (remoteServiceConfiguration == null 
-                || remoteServiceConfiguration.getTimestamp() == null 
-                || ((Instant.now().getEpochSecond() - remoteServiceConfiguration.getTimestamp().getEpochSecond()) > serviceInformation.getCacheMaxAgeInSeconds())) { 
+        if (remoteServiceConfiguration == null
+                || remoteServiceConfiguration.getTimestamp() == null
+                || ((Instant.now().getEpochSecond() - remoteServiceConfiguration.getTimestamp().getEpochSecond()) > serviceInformation.getCacheMaxAgeInSeconds())) {
             try {
-                ICAPClientImpl clientImpl = new ICAPClientImpl(serviceInformation, remoteServiceConfiguration);
+                ICAPClientImpl clientImpl = new ICAPClientImpl(getICAPConnectionManager(), serviceInformation, remoteServiceConfiguration);
                 remoteServiceConfiguration = clientImpl.options();
                 serviceCache.put(serviceInformation, remoteServiceConfiguration);
                 LOG.debug("Set remote service configuration cache: " + serviceInformation);
@@ -157,10 +203,10 @@ public final class ICAPClientFactory {
                 diff = serviceInformation.getCacheMaxAgeInSeconds() + (Instant.now().getEpochSecond() - remoteServiceConfiguration.getTimestamp().getEpochSecond());
                 logCacheDuration = "(valid for " + diff + " seconds)";
             }
-            
+
             LOG.debug("Found remote service configuration in cache " + logCacheDuration + ": " + serviceInformation);
         }
-        
-        return new ICAPClientImpl(serviceInformation, remoteServiceConfiguration);
+
+        return new ICAPClientImpl(getICAPConnectionManager(), serviceInformation, remoteServiceConfiguration);
     }
 }
